alpha/styles/navigation.scss
@use 'foundation/colors' as c;
@use "foundation/breakpoints" as b;

.menuOverlay {
  position: absolute;
  left: 0;
  top: 0;
  height: 45rem;
  width: 19.2rem;
  margin-top: 0;
  background: rgba(c.$grey-100, 0.8);
  background:
    linear-gradient(90deg,
      rgba(c.$grey-000,0.8) 0%,
      rgba(c.$grey-000,0.8) 50%,
      rgba(c.$grey-000,0) 100%);
  z-index: 4;
  @include b.mq(sm) {
    height: 35rem;
  }
}

.hamburgerContainer {
  cursor: pointer;
  height: 4.7rem;
  width: 5rem;
  margin: 2.9rem 2.4rem 0rem;
}

.hamburger {
  position: relative;
  z-index: 1;
  width: 5rem;
  height: 0.6rem;
  border-radius: 0.2rem;
  background: c.$grey-600;
  transition: transform 0.5s;
  &:hover {
    background: c.$grey-650;
    &::before,
    &::after {
      background: c.$grey-650;
    }
  }
  &::before,
  &::after {
    content: "";
    display: block;
    background: c.$grey-600;
    width: 5rem;
    height: 0.6rem;
    border-radius: 0.2rem;
  }
  &::before {
    transform: translateY(1.45rem);
    transition: transform 0.5s;
  }
  &::after {
    transform: translateY(2.35rem);
    transition: transform 0.5s;
    transition-delay: 0.5s;
  }
}

.active {
  transform: translateY(1.45rem) rotate(-45deg);
  transition: transform 0.5s;
  transition-delay: 0.5s;
  &::before {
    transform: rotate(90deg);
    transition: transform 0.5s;
    transition-delay: 0.5s;
  }
  &::after {
    transform: translateY(-0.6rem);
    transition: transform 0.5s;
  }
}

.languageSwitcher {
  color: c.$grey-600;
  font-size: 3.7rem;
  font-weight: 900;
  letter-spacing: 0.1em;
  margin: 1.2rem 2.4rem 13.6rem;
  cursor: pointer;
  display: inline-block;
  position: relative;
  z-index: 1;
  &:hover {
    color: c.$grey-650;
  }
  @include b.mq(sm) {
    margin: 1.2rem 2.4rem 4rem;
  }
}

.social {
  margin: -0.2rem 3rem;
  width: 3.8rem;
  position: relative;
  z-index: 1;
  transition: opacity 0.3s ease;
  &:hover,
  &:active {
    opacity: 0.92;
    transition: opacity 0.3s ease;
  }
}

.headerMenu {
  position: absolute;
  width: calc(104vw * 2);
  height: calc(104vw * 2);
  background: rgba(c.$grey-000, 0.8);
  border-radius: 50%;
  z-index: 1;
  right: calc(4.8rem - 104vw + 9.6rem);
  top: calc(4.8rem - 104vw);
  clip-path: circle(0% at 50% 50%);
  transition: clip-path 1s ease-out;
  text-align: left;
  ul {
    position: absolute;
    top: calc(50% - 2.5rem);
    font-size: 2.1rem;
    font-weight: 500;
    text-transform: uppercase;
    letter-spacing: 0.05em;
    list-style: none;
    padding: 0 4rem;
    @include b.mq(sm) {
      right: calc(50% - 21rem);
      top: calc(50% - 3rem);
      font-size: 1.8rem;
      line-height: 1;
    }
    li {
      padding: 0.17rem 0;
      &:first-child {
        @include b.mq(sm) {
          display: none;
        }
      }
      a {
        color: c.$grey-600;
        border-bottom-color: rgba(c.$grey-500, 0);
        border-bottom-style: solid;
        border-bottom-width: 0.3rem;
        transition: border-bottom-color 0.5s ease-in-out;
      }
      a:hover,
      a:active {
        border-bottom-color: rgba(c.$grey-500, 1);
        border-bottom-style: solid;
        border-bottom-width: 0.3rem;
        transition: border-bottom-color 0.5s ease-in-out;
      }
    }
  }
  @include b.mq(sm) {
    width: calc(104vh * 2);
    height: calc(104vh * 2);
    right: calc(4.8rem - 104vh + 9.6rem);
    top: calc(4.8rem - 104vh);
  }
}

.isActive {
  clip-path: circle(50% at 50% 50%);
  transition: clip-path 1s ease-in;
}

